--- a/gb/21/12/6/n13419762.md
+++ b/gb/21/12/6/n13419762.md
@@ -1,30 +1,30 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lhnyld3630/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lhnyld3630/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lhnyld3630/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lhnyld3630/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lhnyld3630/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>专家：全球政经风暴下 台湾有哪些机遇与挑战</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/12/id13420650-2112061722382378-600x400.jpg" />
 <h6>2021年12月5日，“全球政经风暴下 台湾的机遇与挑战”名家讲座在台大举办，约有130位观众参加。由左至右为日本《产经新闻》台北支局长矢板明夫、中华经济研究院特约研究员吴惠林、前财政部长颜庆章、台大荣誉教授明居正。（社团法人中华民国自由通讯传播协会提供）
 </h6>
 <hr>
-	<p>【大纪元2021年12月06日讯】（大纪元记者钟元、吴旻洲台北报导）“全球政经情势产生重大变化”，台湾知名经济学家说，在全球抗共浪潮下，<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在国际愈加孤立，很可能发动<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F.md#1">武统</a>台湾，“如何化危机为转机，对台湾非常重要”。</p>
+	<p>【大纪元2021年12月06日讯】（大纪元记者钟元、吴旻洲台北报导）“全球政经情势产生重大变化”，台湾知名经济学家说，在全球抗共浪潮下，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在国际愈加孤立，很可能发动<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F.md#1">武统</a>台湾，“如何化危机为转机，对台湾非常重要”。</p>
 <p>12月5日，在台大举办题目为“全球政经风暴下 台湾的机遇与挑战”的一场名家讲座上，中华经济研究院特约研究员吴惠林对出席讲座的约130位观众发表上述评论。</p>
-<h2>吴惠林：全球觉醒抗共 <ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在国际上愈来愈孤立</h2>
+<h2>吴惠林：全球觉醒抗共 <ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在国际上愈来愈孤立</h2>
 <p>吴惠林担任当天的主持人，这场讲座是由社团法人中华民国自由通讯传播协会举办。他表示，拜登总统上台后，在全球抗共潮流沛然莫之能御下，美国还是表现协防台湾的行为。而且美欧政界人士最近络绎不绝来台访问，台湾问题成为全球瞩目焦点。他也认为日本、德国新政府上台，应该会联合欧盟诸国加入抗共行列。</p>
 <p>“还有原来跟中共最密切的非洲国家也在觉醒。”吴惠林说，他们（刚果共和国、乌干达）察觉被骗了，因为“一带一路”让其陷入严重债务危机当中，最近也开始厘清与中共之间的关系。</p>
-<p>他指出，“印尼跟菲律宾和中共的争端冲突也非常厉害，而在中美洲尤其是洪都拉斯，准总统在竞选时说要跟中共发生邦交，但她当选后透露要亲美，不要跟台湾断绝关系，所以真的是全球觉醒在抗共。”他提醒国际上要防范，“愈形孤立的中共，势必加紧<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F.md#1">武统</a>台湾的举动”。</p>
-<h2><ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E7%9F%A2%E6%9D%BF%E6%98%8E%E5%A4%AB.md#1">矢板明夫</a>：中共若犯台 美国一定会介入</h2>
-<p>日本《产经新闻》台北支局长<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E7%9F%A2%E6%9D%BF%E6%98%8E%E5%A4%AB.md#1">矢板明夫</a>表示，拜登政府上台后，在美中贸易摩擦、南海问题及新冠（中共病毒）疫情相关索赔问题相对缓和。但他观察美中之间至少在三个领域会继续对立，包括在高科技战方面，新疆与香港等人权问题，以及台湾问题。</p>
+<p>他指出，“印尼跟菲律宾和中共的争端冲突也非常厉害，而在中美洲尤其是洪都拉斯，准总统在竞选时说要跟中共发生邦交，但她当选后透露要亲美，不要跟台湾断绝关系，所以真的是全球觉醒在抗共。”他提醒国际上要防范，“愈形孤立的中共，势必加紧<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E7%BB%9F.md#1">武统</a>台湾的举动”。</p>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9F%A2%E6%9D%BF%E6%98%8E%E5%A4%AB.md#1">矢板明夫</a>：中共若犯台 美国一定会介入</h2>
+<p>日本《产经新闻》台北支局长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9F%A2%E6%9D%BF%E6%98%8E%E5%A4%AB.md#1">矢板明夫</a>表示，拜登政府上台后，在美中贸易摩擦、南海问题及新冠（中共病毒）疫情相关索赔问题相对缓和。但他观察美中之间至少在三个领域会继续对立，包括在高科技战方面，新疆与香港等人权问题，以及台湾问题。</p>
 <figure id="attachment_13420652" aria-describedby="caption-attachment-13420652" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/12/id13420652-2112061722332378.jpg"><img class="size-large wp-image-13420652" title="分析：全球政经情势下 台湾的机遇与挑战" src="https://i.epochtimes.com/assets/uploads/2021/12/id13420652-2112061722332378-600x450.jpg" alt="分析：全球政经情势下 台湾的机遇与挑战" width="600" b="450" /></a><figcaption id="caption-attachment-13420652" class="wp-caption-text">2021年12月5日，“全球政经风暴下 台湾的机遇与挑战”名家讲座在台大举办，约有130位观众参加。图为日本产业新闻台北支局长矢板明夫。（社团法人中华民国自由通讯传播协会提供）</figcaption></figure>
 <p>对于中共是否会武力攻台，他分析，由于当前中国周围存在“五大火药库”，包括朝鲜半岛、东海钓鱼台、台湾海峡、南海与中印边境。由于中共还是当前亚洲最大的麻烦制造者，这意味着中共并非真想武统台湾，因为照共产党所谓“联合次要敌人、打击主要敌人”说法，中共当前是腹背受敌，难以多线作战。</p>
-<p>“其实中共建政70年来，每天都在想着要如何拿下台湾。”中国问题专家矢板明夫强调，中共之所以至今都不敢<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E6%AD%A6%E5%8A%9B%E7%8A%AF%E5%8F%B0.md#1">武力犯台</a>，就是因为害怕美国介入，特别当前是美国介入台湾海峡的可能性最高的时候，美国有超过8成民意支持台湾，美国国会的友台法案基本都是全票通过，所以中共若要选在此时犯台，美国一定会介入。</p>
+<p>“其实中共建政70年来，每天都在想着要如何拿下台湾。”中国问题专家矢板明夫强调，中共之所以至今都不敢<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A6%E5%8A%9B%E7%8A%AF%E5%8F%B0.md#1">武力犯台</a>，就是因为害怕美国介入，特别当前是美国介入台湾海峡的可能性最高的时候，美国有超过8成民意支持台湾，美国国会的友台法案基本都是全票通过，所以中共若要选在此时犯台，美国一定会介入。</p>
 <p>矢板明夫说，蔡总统提出“四个坚持”，包括永远坚持自由民主的宪政体制、坚持中华民国与中华人民共和国互不隶属、坚持主权不容侵犯并吞、坚持中华民国台湾的前途，必须遵循全体台湾人民的意志。他解读，习近平讲过如果台湾跨过红线，绝对会采取断然措施。这句话倒过来说，也就是蔡总统的这“四个坚持”没跨过红线。</p>
 <p>他建议台湾未来应选择的路线，包括“安定、临机应变、进步”；不冒进、不挑衅、不让步，台湾只要跟中共谈判绝对会吃亏；加强台美合作，促成蔡总统能早日访美会见拜登总统；以及继续拥抱国际社会，包括民进党提出“4个不同意”公投，是让台湾走入国际社会的安全决定。</p>
 <h2>共机舰扰台 明居正：中共拿台湾当筹码 跟美国开展各种谈判</h2>
 <p>台大荣誉教授明居正表示，当前美中对抗已经是结构性问题，不是说改就能改的，而且当前的国际局势，以及中共内部的经济、财政、科技、军事实力与派系斗争等问题，也使得中共无法对台湾为所欲为。</p>
-<figure id="attachment_13420651" aria-describedby="caption-attachment-13420651" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/12/id13420651-2112061722362378.jpg"><img class="size-large wp-image-13420651" title="分析：全球政经情势下 台湾的机遇与挑战" src="https://i.epochtimes.com/assets/uploads/2021/12/id13420651-2112061722362378-600x451.jpg" alt="分析：全球政经情势下 台湾的机遇与挑战" width="600" b="451" /></a><figcaption id="caption-attachment-13420651" class="wp-caption-text">2021年12月5日，“全球政经风暴下 台湾的机遇与挑战”名家讲座在台大举办，约有130位观众参加。由左至右为前财政部长<ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E9%A2%9C%E5%BA%86%E7%AB%A0.md#1">颜庆章</a>、台大荣誉教授明居正。（社团法人中华民国自由通讯传播协会提供）</figcaption></figure>
+<figure id="attachment_13420651" aria-describedby="caption-attachment-13420651" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/12/id13420651-2112061722362378.jpg"><img class="size-large wp-image-13420651" title="分析：全球政经情势下 台湾的机遇与挑战" src="https://i.epochtimes.com/assets/uploads/2021/12/id13420651-2112061722362378-600x451.jpg" alt="分析：全球政经情势下 台湾的机遇与挑战" width="600" b="451" /></a><figcaption id="caption-attachment-13420651" class="wp-caption-text">2021年12月5日，“全球政经风暴下 台湾的机遇与挑战”名家讲座在台大举办，约有130位观众参加。由左至右为前财政部长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A2%9C%E5%BA%86%E7%AB%A0.md#1">颜庆章</a>、台大荣誉教授明居正。（社团法人中华民国自由通讯传播协会提供）</figcaption></figure>
 <p>“中共近年武统台湾的可能性很低。”他分析，共军虽然大量派出军机、军船、军舰骚扰台湾，但真正的目的不是真要动手，而是打算吓唬台湾，并拿台湾当筹码，目的是跟美国开展各种谈判。</p>
 <p>明居正强调，现在很多人都在探讨说，台海若发生战争，美国是否会介入的问题，他认为这其实是“假命题”，因为当前包括美国、日本、欧洲等国的战略是要阻止战争发生，而不是等战争爆发之后，才来选择救不救，这才是“真命题”。</p>
-<h2><ahref="https://github.com/lhnyld3630/djy/blob/master/gb/tag/%E9%A2%9C%E5%BA%86%E7%AB%A0.md#1">颜庆章</a>：台湾加入CPTPP 攸关经贸发展</h2>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A2%9C%E5%BA%86%E7%AB%A0.md#1">颜庆章</a>：台湾加入CPTPP 攸关经贸发展</h2>
 <p>前财政部长颜庆章发表题为“台湾加入CPTPP的机会与挑战”的论述直言，“跨太平洋伙伴全面进步协定”（CPTPP）对台湾是很重要的机会，能够消除双边贸易障碍形成的孤立现象。</p>
 <p>他认为，如同2015年加拿大总理Stephen Harper形容加入TPP（CPTPP的前身《跨太平洋伙伴关系协定》），是“加拿大历史性的一天”，台湾若能顺利加入CPTPP，更是“台湾历史性的一天”。</p>
 <p>“台湾在加入CPTPP的过程，必然有中共政治力的干扰。”颜庆章说，台湾理当全力排除。但政府有效辅导制造业、服务业，尤其是农业的转型与调适，则是最艰钜的挑战，将属政府体系的全面革新。“台湾农业部门是将来在加入TPP的过程中，必须要立即自由化的部门；台湾司法制度也必须要有所调整。”</p>
@@ -41,41 +41,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/21/10/10/n13295148.md#1">郝平：中共武统犯台突降调 背后隐匿多重叙事</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/21/10/11/n13297739.md#1">【远见快评】和统即武统？习与台湾隔空交手</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/21/10/13/n13301946.md#1">台湾将采取“多管齐下”策略对抗中共武统</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/21/10/14/n13304282.md#1">研调：发展半导体 或成中共武统台理由</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/10/n13295148.md#1">郝平：中共武统犯台突降调 背后隐匿多重叙事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/11/n13297739.md#1">【远见快评】和统即武统？习与台湾隔空交手</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/13/n13301946.md#1">台湾将采取“多管齐下”策略对抗中共武统</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/14/n13304282.md#1">研调：发展半导体 或成中共武统台理由</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/28/n10597749.md#1" target="_blank">林辉：因曾与美国上将同台 燕大教授一家凄惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】状元写对联惹祸端 湖南农运真相</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13643964.md#1">【未解之谜】穿越长城 是功能还是魔术？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/10/n13635669.md#1">【人生之钥】遭遇强盗 十五六岁女孩失足落水后的命运</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13646009.md#1">【探索时分】俄军在乌克兰受阻 四大原因</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/15/n13648615.md#1">【横河观点】美俄不放手 中共骑墙难</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13645791.md#1">【新闻看点】大陆疫情大爆发 吉林全省封闭</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644807.md#1">中国镍业巨头险亏80亿美元 剧情大翻转</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644884.md#1">医护人员互殴视频疯传 上海第六医院证实</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13645952.md#1">消息：美告知盟友 北京暗示愿意向俄提供军援</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644401.md#1">金钟视帝唐川昨晚病逝 享寿69岁</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13643619.md#1">自曝曾因长相遭攻击 姚晨如今回应幽默而霸气</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13643780.md#1">艾美奖入围导演遭俄军袭击身亡 享年50岁</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/13/n13642984.md#1">曾见证大S具俊晔交往 黄子佼佩服男方这一点</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13646078.md#1">出差英国先找便利店 杜汶泽惊觉已习惯台湾生活</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/9/n13634214.md#1">头发可以天天洗吗？洗头三大误区一定要知道</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/12/n13640906.md#1">健走能分泌肌肉激素 有防中风等12种好处</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/14/n13644865.md#1">美联储即将加息 为何影响潜在购房者？</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/10/n13637128.md#1">草莓营养价值高 但有这些症状的人不可多吃</a></li>
-<li><a href="https://github.com/lhnyld3630/djy/blob/master/gb/22/3/15/n13647625.md#1">【健康1+1】辉瑞不良事件报告中 有2个关键</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lhnyld3630/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lhnyld3630/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/6/n13419762.htm">专家：全球政经风暴下 台湾有哪些机遇与挑战</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/6/n13419762.htm">专家：全球政经风暴下 台湾有哪些机遇与挑战</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lhnyld3630/djy/blob/master/gb/21/12/6/n13419762.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lhnyld3630/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lhnyld3630/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lhnyld3630/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lhnyld3630/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lhnyld3630/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/12/6/n13419762.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
